// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > addCustomThemes 1`] = `
{
  "cupcake": {
    "extraColors": {
      "ant-neutral-100": "#ffffff",
      "ant-neutral-1000": "#262626",
      "ant-neutral-1100": "#1f1f1f",
      "ant-neutral-1200": "#141414",
      "ant-neutral-1300": "#000000",
      "ant-neutral-200": "#fafafa",
      "ant-neutral-300": "#f5f5f5",
      "ant-neutral-400": "#f0f0f0",
      "ant-neutral-500": "#d9d9d9",
      "ant-neutral-600": "#bfbfbf",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#595959",
      "ant-neutral-900": "#434343",
      "base-100": "#faf7f5",
      "base-200": "#efeae6",
      "base-300": "#e7e2df",
      "base-content": "#291334",
    },
    "types": {
      "accent": "#eeaf3a",
      "neutral": "#291334",
      "primary": "#65c3c8",
      "secondary": "#ef9fbc",
    },
  },
  "dim": {
    "extraColors": {
      "ant-neutral-100": "#000000",
      "ant-neutral-1000": "#f0f0f0",
      "ant-neutral-1100": "#f5f5f5",
      "ant-neutral-1200": "#fafafa",
      "ant-neutral-1300": "#ffffff",
      "ant-neutral-200": "#141414",
      "ant-neutral-300": "#1f1f1f",
      "ant-neutral-400": "#262626",
      "ant-neutral-500": "#434343",
      "ant-neutral-600": "#595959",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#bfbfbf",
      "ant-neutral-900": "#d9d9d9",
      "base-100": "#2A303C",
      "base-200": "#242933",
      "base-300": "#20252E",
      "base-content": "#B2CCD6",
    },
    "types": {
      "accent": "#C792E9",
      "error": "#ffae9b",
      "info": "#28ebff",
      "neutral": "#1c212b",
      "neutral-content": "#B2CCD6",
      "primary": "#9FE88D",
      "secondary": "#FF7D5C",
      "success": "#62efbd",
      "warning": "#efd057",
    },
  },
  "dracula": {
    "extraColors": {
      "ant-neutral-100": "#000000",
      "ant-neutral-1000": "#f0f0f0",
      "ant-neutral-1100": "#f5f5f5",
      "ant-neutral-1200": "#fafafa",
      "ant-neutral-1300": "#ffffff",
      "ant-neutral-200": "#141414",
      "ant-neutral-300": "#1f1f1f",
      "ant-neutral-400": "#262626",
      "ant-neutral-500": "#434343",
      "ant-neutral-600": "#595959",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#bfbfbf",
      "ant-neutral-900": "#d9d9d9",
      "base-100": "#282a36",
      "base-200": "#191e24",
      "base-300": "#15191e",
      "base-content": "#f8f8f2",
    },
    "types": {
      "accent": "#ffb86c",
      "error": "#ff5555",
      "info": "#8be9fd",
      "neutral": "#414558",
      "primary": "#ff79c6",
      "secondary": "#bd93f9",
      "success": "#50fa7b",
      "warning": "#f1fa8c",
    },
  },
  "nord": {
    "extraColors": {
      "ant-neutral-100": "#ffffff",
      "ant-neutral-1000": "#262626",
      "ant-neutral-1100": "#1f1f1f",
      "ant-neutral-1200": "#141414",
      "ant-neutral-1300": "#000000",
      "ant-neutral-200": "#fafafa",
      "ant-neutral-300": "#f5f5f5",
      "ant-neutral-400": "#f0f0f0",
      "ant-neutral-500": "#d9d9d9",
      "ant-neutral-600": "#bfbfbf",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#595959",
      "ant-neutral-900": "#434343",
      "base-100": "#ECEFF4",
      "base-200": "#E5E9F0",
      "base-300": "#D8DEE9",
      "base-content": "#2E3440",
    },
    "types": {
      "accent": "#88C0D0",
      "error": "#BF616A",
      "info": "#B48EAD",
      "neutral": "#4C566A",
      "neutral-content": "#D8DEE9",
      "primary": "#5E81AC",
      "secondary": "#81A1C1",
      "success": "#A3BE8C",
      "warning": "#EBCB8B",
    },
  },
}
`;

exports[`index > compose case 0 1`] = `
{
  "cupcake": {
    "extraColors": {
      "ant-neutral-100": "#ffffff",
      "ant-neutral-1000": "#262626",
      "ant-neutral-1100": "#1f1f1f",
      "ant-neutral-1200": "#141414",
      "ant-neutral-1300": "#000000",
      "ant-neutral-200": "#fafafa",
      "ant-neutral-300": "#f5f5f5",
      "ant-neutral-400": "#f0f0f0",
      "ant-neutral-500": "#d9d9d9",
      "ant-neutral-600": "#bfbfbf",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#595959",
      "ant-neutral-900": "#434343",
      "base-100": "#faf7f5",
      "base-200": "#efeae6",
      "base-300": "#e7e2df",
      "base-content": "#291334",
    },
    "types": {
      "accent": "#eeaf3a",
      "neutral": "#291334",
      "primary": "#65c3c8",
      "secondary": "#ef9fbc",
    },
  },
  "dark": {
    "selector": ".dark",
    "types": {
      "accent": [
        "#22c55e",
        {
          "backgroundColor": "#000000",
          "theme": "dark",
        },
      ],
      "info": [
        "#2dd4bf",
        true,
      ],
      "secondary": {
        "secondary": "#2f54eb",
        "secondary-active": "#5273e0",
        "secondary-content": "#ffffff",
        "secondary-hover": "#263ea0",
      },
    },
  },
  "dim": {
    "extraColors": {
      "ant-neutral-100": "#000000",
      "ant-neutral-1000": "#f0f0f0",
      "ant-neutral-1100": "#f5f5f5",
      "ant-neutral-1200": "#fafafa",
      "ant-neutral-1300": "#ffffff",
      "ant-neutral-200": "#141414",
      "ant-neutral-300": "#1f1f1f",
      "ant-neutral-400": "#262626",
      "ant-neutral-500": "#434343",
      "ant-neutral-600": "#595959",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#bfbfbf",
      "ant-neutral-900": "#d9d9d9",
      "base-100": "#2A303C",
      "base-200": "#242933",
      "base-300": "#20252E",
      "base-content": "#B2CCD6",
    },
    "types": {
      "accent": "#C792E9",
      "error": "#ffae9b",
      "info": "#28ebff",
      "neutral": "#1c212b",
      "neutral-content": "#B2CCD6",
      "primary": "#9FE88D",
      "secondary": "#FF7D5C",
      "success": "#62efbd",
      "warning": "#efd057",
    },
  },
  "dracula": {
    "extraColors": {
      "ant-neutral-100": "#000000",
      "ant-neutral-1000": "#f0f0f0",
      "ant-neutral-1100": "#f5f5f5",
      "ant-neutral-1200": "#fafafa",
      "ant-neutral-1300": "#ffffff",
      "ant-neutral-200": "#141414",
      "ant-neutral-300": "#1f1f1f",
      "ant-neutral-400": "#262626",
      "ant-neutral-500": "#434343",
      "ant-neutral-600": "#595959",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#bfbfbf",
      "ant-neutral-900": "#d9d9d9",
      "base-100": "#282a36",
      "base-200": "#191e24",
      "base-300": "#15191e",
      "base-content": "#f8f8f2",
    },
    "types": {
      "accent": "#ffb86c",
      "error": "#ff5555",
      "info": "#8be9fd",
      "neutral": "#414558",
      "primary": "#ff79c6",
      "secondary": "#bd93f9",
      "success": "#50fa7b",
      "warning": "#f1fa8c",
    },
  },
  "light": {
    "selector": "html,:root",
    "types": {
      "accent": "#22c55e",
      "info": "#2dd4bf",
      "secondary": "#2f54eb",
    },
  },
  "nord": {
    "extraColors": {
      "ant-neutral-100": "#ffffff",
      "ant-neutral-1000": "#262626",
      "ant-neutral-1100": "#1f1f1f",
      "ant-neutral-1200": "#141414",
      "ant-neutral-1300": "#000000",
      "ant-neutral-200": "#fafafa",
      "ant-neutral-300": "#f5f5f5",
      "ant-neutral-400": "#f0f0f0",
      "ant-neutral-500": "#d9d9d9",
      "ant-neutral-600": "#bfbfbf",
      "ant-neutral-700": "#8c8c8c",
      "ant-neutral-800": "#595959",
      "ant-neutral-900": "#434343",
      "base-100": "#ECEFF4",
      "base-200": "#E5E9F0",
      "base-300": "#D8DEE9",
      "base-content": "#2E3440",
    },
    "types": {
      "accent": "#88C0D0",
      "error": "#BF616A",
      "info": "#B48EAD",
      "neutral": "#4C566A",
      "neutral-content": "#D8DEE9",
      "primary": "#5E81AC",
      "secondary": "#81A1C1",
      "success": "#A3BE8C",
      "warning": "#EBCB8B",
    },
  },
}
`;

exports[`index > extendThemes 1`] = `
{
  "dark": {
    "selector": ".dark",
    "types": {
      "accent": [
        "#22c55e",
        {
          "backgroundColor": "#000000",
          "theme": "dark",
        },
      ],
      "info": [
        "#2dd4bf",
        true,
      ],
      "secondary": {
        "secondary": "#2f54eb",
        "secondary-active": "#5273e0",
        "secondary-content": "#ffffff",
        "secondary-hover": "#263ea0",
      },
    },
  },
  "light": {
    "selector": "html,:root",
    "types": {
      "accent": "#22c55e",
      "info": "#2dd4bf",
      "secondary": "#2f54eb",
    },
  },
}
`;
